Tray > Network: Enable toggles in login screen

Regression introduced in:
https://chromium-review.googlesource.com/1089585

Toggles should only be disabled for secondary users when logged in,
not in the login screen.

Bug: 851893
Change-Id: Ia77b26c6217ad184ecb765b3c8f3a5fa4cccb6ea
Reviewed-on: https://chromium-review.googlesource.com/1098308
Commit-Queue: Steven Bennetts <stevenjb@chromium.org>
Reviewed-by: Toni Barzic <tbarzic@chromium.org>
Cr-Commit-Position: refs/heads/master@{#566892}
Former-commit-id: bd8eadcdfb36c1b0c9166c33f96952912f8112cf